Removed Bean dependencies